# HSIPF

./: CMakeLists.txt  CMakeLists.txt~  HSIPF.cpp  HSIPF.git.kdev4  HSIPF.h  README.md  ShpereBlocks.cpp  ShpereBlocks.h  bunny.ply  common.h  main.cpp  main.cpp~  sphere.ply
